New Menu Filter, Hamburger Bar and Up Arrow

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@
     box-sizing: border-box;
 }
 
-
+html {
+    scroll-behavior: smooth;
+  }
 
 /* Estilo geral do corpo */
 body {
@@ -99,7 +101,7 @@ nav ul {
 @media screen and (max-width: 768px) {
     nav ul {
         display: none;
-        flex-direction: column;
+        flex-direction:row ;
         width: 100%;
         text-align: left;
     }
@@ -125,7 +127,7 @@ nav ul {
 
 .reel iframe {
 
-    width: 55%;
+    width: 50%;
     margin-bottom: 50px;
     border: 0;
 }
@@ -961,3 +963,85 @@ margin-bottom: 30px;
         width: 100%;  /* O vídeo ocupa 100% da largura em telas menores */
     }
 }
+
+
+
+
+/* FILTRAR RESULTADOS */
+.menu {
+    margin-bottom: 20px;
+    text-align: center; /* Centraliza o menu em telas pequenas */
+}
+
+.menu .filter {
+    color: #555;
+    cursor: pointer;
+    margin-top: 50px;
+    font-size: 1.2em;
+    padding: 5px 10px;
+    display: inline-block;
+}
+
+.menu .filter:hover {
+    color: bisque;
+}
+
+.menu .filter.selected {
+    color: blanchedalmond; /* Cor do texto para contraste */
+}
+
+/* Estilos para ecrãs menores (telemóveis) */
+@media (max-width: 768px) {
+    .menu .filter {
+        font-size: 1em; /* Tamanho de fonte menor */
+        padding: 5px;   /* Reduz o padding */
+    }
+}
+
+@media (max-width: 576px) {
+    .menu .filter {
+        font-size: 0.9em; /* Tamanho de fonte ainda menor */
+      
+        margin: 5px 0;   /* Margem vertical para separar os filtros */
+    }
+}
+
+@media (max-width: 425px) {
+    .menu .filter {
+        font-size: 0.9em; /* Tamanho de fonte ainda menor */
+       
+        margin: 5px 0;   /* Margem vertical para separar os filtros */
+    }
+}
+
+
+
+.back-to-top {
+    position: fixed;
+    width: 60px;
+    height: 60px;
+    bottom: 20px;
+    right: 20px;
+    
+    color: #fff;
+    padding: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    display: none;
+  }
+  
+  .back-to-top:hover {
+    filter: drop-shadow(0 0 5px #fff);
+  }
+
+  @media (max-width: 1100px) {
+    .back-to-top {
+      display: block;
+    }
+  }
+
+  @media (min-width: 425px) {
+    .back-to-top {
+      display: none;
+    }
+  }
