--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ html {
     scroll-behavior: smooth;
   }
 
+
+
 /* Estilo geral do corpo */
 body {
     font-family: 'Montserrat', sans-serif;
@@ -32,15 +34,20 @@ body {
     
 }
 
+@font-face {
+    font-family: 'Logo';
+    src: url('fonts/AdventPro-Thin.ttf') format('truetype');
+}
+
 /* Estilização do logo e texto de apresentação */
 .logo{
+    font-family: 'Logo';
     text-align: center;
     margin-top: 100px;
 }
 
 .logo h1 {
     font-size: 3em;
-    font-weight: lighter;
     margin-bottom: 10px;
     text-align: center;
 }
@@ -305,7 +312,7 @@ footer a:hover {
 
 /* Seção "Sobre Mim" */
 .about-container {
-    margin-top: 50px;
+    margin-top: 150px;
     position: relative;
     display: flex;
     flex-direction: column; /* Coloca os elementos um embaixo do outro em telas menores */
@@ -339,7 +346,7 @@ footer a:hover {
 }
 
 .image-box img {
-    width: 100%;
+    width: 80%;
     height: auto; /* Mantém a proporção da imagem */
     object-fit: cover;
     filter: grayscale();
@@ -587,6 +594,12 @@ height: 800px;
     box-sizing: border-box;
 }
 
+.text-container a{
+
+color: #ff6347;
+text-align: center;
+
+}
 
 /* Tamanho de fonte padrão para desktop */
 .text-container h1 {
@@ -595,7 +608,7 @@ height: 800px;
 
 .text-container p {
     font-size: 1.2em;
-    margin-bottom: 25px;
+    margin-bottom: 40px;
 }
 
 .text-container li {
@@ -900,9 +913,8 @@ margin-bottom: 30px;
 }
 .modal-content {
     margin: auto;
-    display: block;
-    width: 80%;
-    max-width: 700px;
+    display: flex;
+    max-width: 50%;
     height: auto;  /* Ajusta a altura de acordo com a proporção da imagem */
     object-fit: contain;  /* Garante que a imagem mantenha a proporção */
 }
