--- a/styles.css
+++ b/styles.css
@@ -53,9 +53,10 @@ body {
 }
 
 .logo p {
-    font-size: 1em;
+    font-size: 1.2em;
     margin-bottom: 50px;
     color: #e4ded0;
+    font-weight:300;
 }
 
 /* Navegação e links */
@@ -71,7 +72,7 @@ nav ul li {
 
 nav ul li a {
     font-size: 1em;
-    font-weight:200;
+    font-weight:300;
     text-decoration: none;
     color: #e4ded0;
     padding: 10px 20px;
@@ -79,7 +80,8 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #abccbd;
+    color: #a74ba2;
+  
 }
 
 
@@ -378,19 +380,26 @@ footer a:hover {
     }
 }
 
-.download-btn {
+.view-btn {
     display: inline-block;
-    
-    margin-top: 20px;
     padding: 10px 20px;
-    color: #333;
+    margin: 10px 5px;
+    background-color: #666666;
+    color: #fff;
     text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s, transform 0.3s;
     font-weight: bold;
-    text-decoration: underline;
-    
-    margin-bottom: 20px;
-    
-    
+    text-align: center;
+}
+
+.view-btn i {
+    margin-right: 8px;
+}
+
+.view-btn:hover {
+    background-color: #383838;
+    transform: scale(1.05);
 }
 
 .email {
